Fix: Styling CreateGroupChat on desktop
Before users where not ligned up with each other.
Also create chat Button was not visible on desktop.

--- a/client/src/components/CreateGroupChat/CreateGroupChat.module.css
+++ b/client/src/components/CreateGroupChat/CreateGroupChat.module.css
@@ -3,10 +3,9 @@
   display: flex;
   flex-direction: column;
   background-color: var(--color-bg);
-  height: 100vh;
+  height: 90vh;
   width: 100%;
-  overflow: hidden;
-  font-family: "Inter", system-ui, sans-serif;
+  overflow: auto;
   color: var(--color-text);
 }
 
@@ -38,7 +37,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /* Search Bar */
@@ -70,6 +69,7 @@
 .userList {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
 }
 
 .userItem {
@@ -111,13 +111,14 @@
   text-overflow: ellipsis;
 }
 
-.messageContent {
+.bioContent {
   font-size: 0.85rem;
   color: var(--color-text-light);
   margin: 0.25rem 0 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-transform: lowercase;
 }
 
 .checkbox {
@@ -166,14 +167,11 @@
   color: white;
 }
 
+/* Desktop */
 @media (min-width: 768px) {
   .pageWrapper {
     max-width: 420px;
     border-right: 1px solid var(--color-border);
-  }
-
-  .userItem {
-    grid-template-columns: 50px 1fr 24px;
   }
 
   .avatar {
